--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Gharbi Motez",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "save": "^2.4.0"
   }
 }
